--- a/register.html
+++ b/register.html
@@ -16,18 +16,17 @@
   --bg: #e8ebf3;
   --text: #111827;
   --muted: #6b7280;
-  --shadow: rgba(0,0,0,0.1);
+  --shadow: rgba(0,0,0,0.15);
 }
 
 /* Reset */
-* { box-sizing: border-box; margin:0; padding:0; font-family:"Inter", sans-serif; }
+* { box-sizing:border-box; margin:0; padding:0; font-family:"Inter",sans-serif; }
 
 body {
-  height:100vh;
-  width:100vw;
-  background: var(--bg);
+  height:100vh; width:100vw;
+  background:var(--bg);
   overflow:hidden;
-  position: relative;
+  position:relative;
 }
 
 /* Floating Bubbles */
@@ -35,95 +34,92 @@ body {
   position:absolute;
   border-radius:50%;
   background:var(--accent);
-  opacity:0.12;
+  opacity:0.1;
   animation:float 8s ease-in-out infinite;
 }
 .bubble:nth-child(1){width:120px;height:120px;top:10%;left:5%;animation-delay:0s;}
 .bubble:nth-child(2){width:80px;height:80px;bottom:15%;right:10%;animation-delay:2s;}
 .bubble:nth-child(3){width:60px;height:60px;top:40%;left:70%;animation-delay:1s;}
-@keyframes float{0%,100%{transform:translateY(0);}50%{transform:translateY(-25px);}}
+@keyframes float{0%,100%{transform:translateY(0);}50%{transform:translateY(-20px);}}
 
-/* Mini File Explorer */
+/* Mini Explorer */
 #miniExplorer{
   position:absolute;
-  top:50px;
-  left:50px;
-  width:320px;
+  top:50px; left:50px;
+  width:340px;
   background:#ffffff;
-  border-radius:16px;
+  border-radius:18px;
   box-shadow:0 12px 36px var(--shadow);
   overflow:hidden;
   opacity:0;
   transform:translateY(-30px);
   animation:slideIn 1s forwards;
 }
-@keyframes slideIn{to{opacity:1;transform:translateY(0);}}
+@keyframes slideIn{to{opacity:1; transform:translateY(0);}}
 
 #miniExplorer .header{
   background:var(--accent);
   color:#fff;
-  padding:12px 16px;
+  padding:14px 18px;
   display:flex;
   align-items:center;
-  gap:8px;
+  gap:10px;
   font-size:16px;
   font-weight:600;
 }
-
 #miniExplorer .content{
   display:flex;
   flex-direction:column;
-  padding:12px;
+  padding:14px;
   gap:10px;
-  max-height:250px;
+  max-height:280px;
   overflow:hidden;
 }
 
+/* Files & Folders */
 .file-row{
   display:flex;
   align-items:center;
-  gap:10px;
-  font-size:14px;
+  gap:12px;
+  font-size:15px;
   font-weight:500;
   color:var(--text);
   opacity:0;
-  transform:translateX(-20px);
+  transform:translateX(-25px);
   animation:rowSlide 0.5s forwards;
-  transition: transform 1.5s ease-in-out;
 }
 .file-row i{
+  font-size:22px;
   color:var(--accent);
-  font-size:20px;
   animation:floatIcon 2s ease-in-out infinite alternate;
 }
 @keyframes rowSlide{to{opacity:1; transform:translateX(0);}}
-@keyframes floatIcon{0%{transform:translateY(0);}100%{transform:translateY(-5px);}}
+@keyframes floatIcon{0%{transform:translateY(0);}100%{transform:translateY(-4px);}}
 
-/* Google Sign-In Button next to Explorer */
+/* Google Sign-In button to right */
 #buttonDiv{
   position:absolute;
   top:50px;
-  left:400px; /* Right of explorer with some space */
+  left:420px; /* small space to right of explorer */
 }
 
 /* User Info */
 #userInfo{
   position:absolute;
-  top:150px;
-  left:50px;
+  top:360px; left:50px;
   display:flex;
   align-items:center;
-  gap:12px;
-  padding:10px 14px;
-  border-radius:16px;
+  gap:14px;
+  padding:12px 16px;
+  border-radius:18px;
   background:#ffffff;
-  box-shadow:0 8px 25px var(--shadow);
+  box-shadow:0 10px 28px var(--shadow);
   opacity:0;
   transform:translateY(-20px);
   transition:all 0.5s ease;
 }
 #userInfo.show{opacity:1; transform:translateY(0);}
-#userInfo img{width:70px;height:70px;border-radius:50%;box-shadow:0 4px 12px var(--shadow);}
+#userInfo img{width:70px;height:70px;border-radius:50%;box-shadow:0 5px 14px var(--shadow);}
 #userInfo h3{font-size:18px;font-weight:600;color:var(--text);}
 
 /* Loading Overlay */
@@ -146,7 +142,7 @@ body {
 
 <!-- Mini File Explorer -->
 <div id="miniExplorer">
-  <div class="header"><i class="fas fa-folder-open"></i> My Drive</div>
+  <div class="header"><i class="fab fa-google-drive"></i> Google Drive</div>
   <div class="content" id="explorerContent"></div>
 </div>
 
@@ -166,28 +162,35 @@ body {
 </div>
 
 <script>
-// Mini Explorer Animation
-const explorerContent=document.getElementById('explorerContent');
-const exampleFiles=[
-  {icon:"fa-folder",name:"Projects"},
-  {icon:"fa-folder",name:"Hybrid Chat"},
-  {icon:"fa-file-code",name:"main.js"},
-  {icon:"fa-file-image",name:"avatar.png"},
-  {icon:"fa-file-lines",name:"account.json"}
+// Continuous Folder/File Addition
+const explorerContent = document.getElementById('explorerContent');
+const exampleFiles = [
+  {icon:"fa-folder", name:"Projects"},
+  {icon:"fa-folder", name:"Hybrid Chat"},
+  {icon:"fa-file-code", name:"main.js"},
+  {icon:"fa-file-image", name:"avatar.png"},
+  {icon:"fa-file-lines", name:"account.json"}
 ];
-let i=0;
-function addNextFile(){
-  if(i>=exampleFiles.length) return;
-  const f=exampleFiles[i];
-  const el=document.createElement('div');
-  el.className='file-row';
-  el.style.animationDelay=`${i*0.25}s`;
-  el.innerHTML=`<i class="fas ${f.icon}"></i><span>${f.name}</span>`;
+let index = 0;
+
+function addFileContinuously() {
+  if(index >= exampleFiles.length) index = 0; // Loop infinitely
+  const f = exampleFiles[index];
+  const el = document.createElement('div');
+  el.className = 'file-row';
+  el.style.animationDelay = `${index*0.25}s`;
+  el.innerHTML = `<i class="fas ${f.icon}"></i><span>${f.name}</span>`;
   explorerContent.appendChild(el);
-  i++;
-  setTimeout(addNextFile,300);
+  
+  // Scroll smoothly if overflow
+  if(explorerContent.scrollHeight > explorerContent.clientHeight){
+    explorerContent.scrollTo({top: explorerContent.scrollHeight, behavior:'smooth'});
+  }
+  
+  index++;
+  setTimeout(addFileContinuously, 1000); // Add new file every 1 second
 }
-addNextFile();
+addFileContinuously();
 
 // Google Sign-In
 let tokenClient;
@@ -202,39 +205,39 @@ window.onload = () => {
 
 // Handle Sign-In
 async function handleCredentialResponse(response){
-  const data=JSON.parse(atob(response.credential.split('.')[1]));
+  const data = JSON.parse(atob(response.credential.split('.')[1]));
 
   // Display profile
-  const userInfo=document.getElementById('userInfo');
-  document.getElementById('userPic').src=data.picture;
-  document.getElementById('userName').textContent=data.name;
+  const userInfo = document.getElementById('userInfo');
+  document.getElementById('userPic').src = data.picture;
+  document.getElementById('userName').textContent = data.name;
   userInfo.classList.add('show');
 
   // Save locally
-  const profileData={
-    uuid:crypto.randomUUID(),
-    name:data.name,
-    email:data.email,
-    avatar:data.picture,
-    createdAt:new Date().toISOString()
+  const profileData = {
+    uuid: crypto.randomUUID(),
+    name: data.name,
+    email: data.email,
+    avatar: data.picture,
+    createdAt: new Date().toISOString()
   };
   localStorage.setItem('rc_profile_v2', JSON.stringify(profileData));
 
   // Show loading overlay
-  const overlay=document.getElementById('loadingOverlay');
+  const overlay = document.getElementById('loadingOverlay');
   overlay.style.display='flex';
 
   // Upload account.json to Drive
   gapi.load('client', async () => {
     await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]});
-    tokenClient=google.accounts.oauth2.initTokenClient({
-      client_id:CLIENT_ID,
-      scope:SCOPES,
+    tokenClient = google.accounts.oauth2.initTokenClient({
+      client_id: CLIENT_ID,
+      scope: SCOPES,
       callback: async (tokenResponse)=>{
         if(tokenResponse.error){console.error(tokenResponse);return;}
-        const accessToken=tokenResponse.access_token;
-        const metadata={name:"account.json",mimeType:"application/json"};
-        const form=new FormData();
+        const accessToken = tokenResponse.access_token;
+        const metadata = {name:"account.json", mimeType:"application/json"};
+        const form = new FormData();
         form.append('metadata', new Blob([JSON.stringify(metadata)],{type:'application/json'}));
         form.append('file', new Blob([JSON.stringify(profileData)],{type:'application/json'}));
         await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart',{
